<resources>
    <string name="app_name">Talk bilingually</string>
    //input label
    <string name="input_label_gmail">Email Address</string>
    <string name="input_label_password">Password</string>
    <string name="input_label_fullname">Fullname</string>
    <string name="input_label_confirm_password">Confirm Pasword</string>
    //input field
    <string name="input_gmail">Email</string>
    <string name="input_password">Password</string>
    <string name="input_fullname">Fullname</string>
    <string name="input_confirm_password">Confirm password</string>
    //string
    <string name="string_or">OR</string>
    <string name="string_remember">Remember me</string>
    <string name="string_login">Login</string>
    <string name="title_text_login">Log in to your Account</string>
    <string name="title_text_register">Create an Account</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="describe_login">Welcome back, please enter your details.</string>
    <string name="string_sign_up">Sign Up?</string>

    <string name="default_web_client_id">580191491298-7hd56vunv4s5nbjtfdsq1f7si91dv9pc.apps.googleusercontent.com</string>
    <string name="default_android_client_id">580191491298-orn0gg9vs22q1elpsu5s8jcka0s2qimh.apps.googleusercontent.com</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="know_word"><u>I already memorized this word.</u></string>

    <string name="check_email">We sent a reset link to contact@dscode...com enter 5 digit code that mentioned in the email</string>
    <string name="btn_verify_code">VERIFY CODE</string>
    <string name="btn_done">DONE</string>
    <string name="title_old_password">Old password</string>
    <string name="title_change_password">Change password</string>
    <string name="btn_save">Save</string>
    <string name="et_confirm_password">Enter confirm password</string>
    <string name="title_confirm_pass">Confirm password</string>
    <string name="et_current_pass">Enter old password</string>
    <string name="title_new_pass">New password</string>
    <string name="et_new_pass">Enter new password</string>
    <string name="btn_gg">Continue with Google</string>
    <string name="dont_have_a_account">Don’t have an account?</string>
    <string name="des_register">Sign up now to get started with an account.</string>
    <string name="btn_register">Register</string>
    <string name="have_an_account">Already have an account?</string>
    <string name="title_check_email">Check your email</string>
    <string name="btn_unfriend">Unfriend</string>
    <string name="time_check_email">Resend in 60s</string>
    <string name="name_user">Nguyen van a</string>
    <string name="title_result_quiz">Quiz Completed</string>
    <string name="des_result_quiz">You have successfully completed the quiz!</string>
    <string name="btn_home">HOME</string>
    <string name="btn_re_quiz">START QUIZ AGAIN</string>
    <string name="time_quiz">35 Minutes</string>
    <string name="text_wrong">3 Wrong Answers</string>
    <string name="total_question">4 Questions</string>
    <string name="text_correct">10 Correct  Answers</string>
</resources>