<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="118dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="11dp"
            app:srcCompat="@drawable/logo"
            android:contentDescription="image logo"/>

        <TextView
            android:id="@+id/textView3"
            style="@style/TitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_text_login" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:text="@string/describe_login"
            android:textAlignment="center"
            android:textColor="@color/secondary_800"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView1"
            style="@style/InputLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_label_gmail" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextTextEmail"
                    style="@style/InputField"
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    android:hint="@string/input_gmail"
                    android:textColor="@color/black"
                    android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
        <TextView
            android:id="@+id/textView2"
            style="@style/InputLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_label_password" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextTextPassword"
                style="@style/InputField"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/input_password"
                android:textColor="@color/black"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_remember"
                android:textColor="@color/secondary_700"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_pass"
                android:textAlignment="textEnd"
                android:textColor="@color/secondary_900"
                android:textSize="13sp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:background="@drawable/button_background"
            android:text="@string/string_login"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Don’t have an account?"
                android:textColor="@color/secondary" />

            <TextView
                android:id="@+id/textSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:elevation="2dp"
                android:text="@string/string_sign_up"
                android:textColor="#1676F3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="126dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:background="@color/secondary_500"

                />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginEnd="17dp"
                android:text="@string/string_or"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="126dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:background="@color/secondary_500"

                />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/btnGG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:elevation="2dp"
            android:background="@drawable/btn_gg_background"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="17.5dp"
            android:paddingBottom="17.5dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="19dp"
                android:layout_height="19dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="20dp"
                app:srcCompat="@drawable/logo_gg" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Continue with Google"
                android:textColor="@color/secondary_700"
                android:textSize="16sp" />


        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>