<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/backLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20"
        app:cardBackgroundColor="@color/md_theme_secondaryContainer"
        app:cardCornerRadius="@dimen/dimen_50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/dimen_20"
            android:layout_height="@dimen/dimen_20"
            android:layout_margin="@dimen/dimen_3"
            android:contentDescription="@null"
            app:srcCompat="@drawable/ic_back" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/titleChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_20"
        android:layout_marginTop="@dimen/dimen_18"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/title_change_password"
        android:textColor="@color/md_theme_onSurface"
        android:textSize="@dimen/font_20"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/backLogin"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleOldPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/title_old_password"
        android:textColor="@color/md_theme_onSurface"
        android:textSize="@dimen/font_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleChangePassword" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/currentPasswordTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_5"
        android:textColorHint="@color/md_theme_onSecondaryContainer"
        app:boxStrokeColor="@color/md_theme_onSecondaryContainer"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleOldPassword"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCurrentPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/et_current_pass"
            android:inputType="textPassword"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/titleNewPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/title_new_pass"
        android:textColor="@color/md_theme_onSurface"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currentPasswordTIL" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newPasswordTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_5"
        android:textColorHint="@color/md_theme_onSecondaryContainer"
        app:boxStrokeColor="@color/md_theme_onSecondaryContainer"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleNewPass"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/et_new_pass"
            android:inputType="textPassword"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/titleConfirmPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/title_confirm_pass"
        android:textColor="@color/md_theme_onSurface"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newPasswordTIL" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_5"
        android:textColorHint="@color/md_theme_onSecondaryContainer"
        app:boxStrokeColor="@color/md_theme_onSecondaryContainer"
        app:hintEnabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleConfirmPass"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/et_confirm_password"
            android:inputType="textPassword"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnChangePassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/dimen_30"
        android:background="@drawable/button_background"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/btn_save"
        android:textColor="@color/white"
        android:textSize="@dimen/font_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordTIL" />

</androidx.constraintlayout.widget.ConstraintLayout>
