<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
    android:padding="@dimen/_10sdp"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="@dimen/img_width"
        android:layout_height="@dimen/img_height"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_25sdp"
        app:srcCompat="@drawable/logo_app" />

    <TextView
        android:id="@+id/textView12"
        style="@style/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/title_text_register"
        android:textSize="@dimen/_18ssp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:text="Sign up now to get started with an account."
        android:textAlignment="center"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/secondary_800"
        android:layout_marginBottom="@dimen/_20sdp"
        android:textSize="@dimen/_16ssp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fullnameTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_36sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        style ="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/md_theme_onSecondaryContainer"
        android:textColorHint="@color/md_theme_onSecondaryContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTextFullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/input_fullname"
            android:inputType="text"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="@dimen/_12sdp"
        style ="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/md_theme_onSecondaryContainer"
        android:textColorHint="@color/md_theme_onSecondaryContainer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_gmail"
                android:fontFamily="@font/poppins_medium"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black"
        android:layout_marginBottom="@dimen/_12sdp"
        style ="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:textColorHint="@color/md_theme_onSecondaryContainer"
        app:boxStrokeColor="@color/md_theme_onSecondaryContainer"
        app:layout_constraintTop_toBottomOf="@+id/emailTIL">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPasswordTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleTint="@color/black"
        android:layout_marginBottom="@dimen/_12sdp"
        app:boxStrokeColor="@color/md_theme_onSecondaryContainer"
        android:textColorHint="@color/md_theme_onSecondaryContainer"
        style ="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextTextConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/input_confirm_password"
                android:inputType="textPassword"
                android:textColor="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:textSize="@dimen/_16ssp"
        android:background="@drawable/button_background"
        android:text="Register"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/white" />

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_65sdp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="Don’t have an account?"
            android:textSize="@dimen/_16ssp"
            android:textColor="@color/secondary" />

        <TextView
            android:id="@+id/textSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_16ssp"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="Login?"
            android:textColor="#1676F3" />
    </LinearLayout>
</LinearLayout>